--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-heros",
+	"name": "react-heroes",
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.jsx",
@@ -49,6 +49,7 @@
 		"react-dom": "^16.9.0",
 		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.0.1",
-		"redux": "^4.0.4"
+		"redux": "^4.0.4",
+		"redux-thunk": "^2.3.0"
 	}
 }
