--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,7 @@
 			{
 				"useBuiltIns": "usage",
 				"corejs": 3,
-				"targets": "last 2 version",
-				"modules": false
+				"targets": "last 2 version"
 			}
 		],
 		"@babel/preset-react"
