--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"babel-eslint": "^10.0.3",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-import": "^1.12.2",
+		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^3.2.0",
 		"eslint": "^6.3.0",
 		"eslint-config-react-app": "^5.0.1",
@@ -38,6 +39,8 @@
 		"redux-mock-store": "^1.5.3",
 		"sass-loader": "^8.0.0",
 		"webpack": "^4.39.3",
+		"webpack-ant-icon-loader": "^1.0.8",
+		"webpack-bundle-analyzer": "^3.5.2",
 		"webpack-cli": "^3.3.8",
 		"webpack-dev-server": "^3.8.0"
 	},
